@@ -1,4 +1,4 @@
-MANIFEST for byacc, version t20200910
+MANIFEST for byacc, version t20200922
 --------------------------------------------------------------------------------
 MANIFEST                        this file
 ACKNOWLEDGEMENTS                original version of byacc - 1993
